added sentence on register/login page to create an account

--- a/financeapp/app/templates/login.html
+++ b/financeapp/app/templates/login.html
@@ -5,6 +5,9 @@
 {% endblock %}
 
 {% block main %}
+    <h5>This is a demo website, you need to create an account to access to use all the features.</h5>
+    <h5>If you do not have an account, click Register in the top right to create one</h5>
+    <br>
     <form action="/login" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
