--- a/financeapp/app/templates/register.html
+++ b/financeapp/app/templates/register.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block main %}
+    <h5>This is a demo website, you need to create an account to access to use all the features.</h5>
+    <br>
     <form action="/register" method="post">
         <div class="form-group">
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Enter Username" type="text">
